kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outfit-manager
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: outfit-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: outfit-manager
    spec:
      containers:
        - name: outfit-manager
          image: ${CONTAINER_IMAGE_TAGGED}
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: outfit-manager
spec:
  ports:
    - port: 3000
  selector:
    app.kubernetes.io/name: outfit-manager
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: outfit-manager
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Wardrobe manager
    gethomepage.dev/icon: mdi-hanger
    gethomepage.dev/group: 1P
spec:
  hostnames:
    - outfits.home.maximemoreillon.com
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: outfit-manager
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
